// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-table renders with default props (empty table) 1`] = `
<modus-wc-table>
  <div class="table-container">
    <div aria-label="Default table" class="modus-wc-overflow-x-auto">
      <table class="modus-wc-table modus-wc-table-density-comfortable modus-wc-table-hover">
        <thead>
          <tr></tr>
        </thead>
        <tbody>
          <tr>
            <td class="no-data-message" colspan="1">
              No data available
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</modus-wc-table>
`;

exports[`modus-wc-table renders with default props 1`] = `
<modus-wc-table>
  <div class="table-container">
    <div class="modus-wc-overflow-x-auto">
      <table class="modus-wc-table modus-wc-table-density-comfortable modus-wc-table-hover">
        <thead>
          <tr></tr>
        </thead>
        <tbody>
          <tr>
            <td class="no-data-message" colspan="1">
              No data available
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</modus-wc-table>
`;

exports[`modus-wc-table should render with custom props 1`] = `
<modus-wc-table custom-class="test-class" density="compact" zebra="true">
  <div class="table-container">
    <div aria-label="Default table" class="modus-wc-overflow-x-auto">
      <table class="modus-wc-table modus-wc-table-density-compact modus-wc-table-hover modus-wc-table-zebra test-class">
        <thead>
          <tr>
            <th style="width: 200px;">
              Name
            </th>
            <th>
              Email
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td data-col="name">
              John Smith
            </td>
            <td data-col="email">
              john.smith@example.com
            </td>
          </tr>
          <tr>
            <td data-col="name">
              Jane Doe
            </td>
            <td data-col="email">
              jane.doe@example.com
            </td>
          </tr>
          <tr>
            <td data-col="name">
              Bob Johnson
            </td>
            <td data-col="email">
              bob.johnson@example.com
            </td>
          </tr>
          <tr>
            <td data-col="name">
              Carole Baskin
            </td>
            <td data-col="email"></td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</modus-wc-table>
`;

exports[`modus-wc-table should update when property watchers are triggered 1`] = `
<modus-wc-table>
  <div class="table-container">
    <div aria-label="Default table" class="modus-wc-overflow-x-auto">
      <table class="modus-wc-table modus-wc-table-density-comfortable modus-wc-table-hover">
        <thead>
          <tr>
            <th style="width: 200px;">
              Name
            </th>
            <th>
              Email
            </th>
            <th>
              Status
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td data-col="name">
              John Smith
            </td>
            <td data-col="email">
              john.smith@example.com
            </td>
            <td data-col="status">
              Active
            </td>
          </tr>
          <tr>
            <td data-col="name">
              Jane Doe
            </td>
            <td data-col="email">
              jane.doe@example.com
            </td>
            <td data-col="status">
              Inactive
            </td>
          </tr>
          <tr>
            <td data-col="name">
              Bob Johnson
            </td>
            <td data-col="email">
              bob.johnson@example.com
            </td>
            <td data-col="status">
              Active
            </td>
          </tr>
          <tr>
            <td data-col="name">
              Carole Baskin
            </td>
            <td data-col="email"></td>
            <td data-col="status"></td>
          </tr>
          <tr>
            <td data-col="name">
              New Person
            </td>
            <td data-col="email">
              new@example.com
            </td>
            <td data-col="status"></td>
          </tr>
        </tbody>
      </table>
    </div>
    <div class="pagination-container">
      <div class="page-size-selector">
        <span>
          Show
        </span>
        <modus-wc-select aria-label="Select page size" bordered="" size="md"></modus-wc-select>
      </div>
      <div class="pagination-info">
        Showing 1 to 5 of 5 entries
      </div>
      <div class="pagination-controls">
        <modus-wc-pagination count="1" page="1" size="md"></modus-wc-pagination>
      </div>
    </div>
  </div>
</modus-wc-table>
`;
